# release-readiness-command-center

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: releases.json
docs/: README.md  project_plan.md  release_notes.md
reports/: blocker-register.csv  release-dashboard.html  release-summary.md  repo-readiness.csv
src/release_readiness_center/: __init__.py  analysis.py  cli.py  data.py  export.py
tests/: test_analysis.py
